feat: Update logout URL and add conditional link for authorized users in dropdown menu

--- a/openscc/mimir/templates/mimirBase.html
+++ b/openscc/mimir/templates/mimirBase.html
@@ -664,7 +664,7 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-end">
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'logout' %}">
+                            <a class="dropdown-item" href="{% url 'submission:logout' %}">
                                 <i class="fas fa-sign-out-alt me-2"></i>Sair
                             </a>
                         </div>
